[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/metaclips-botter/substrate", branch = "master" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
